--- a/SongScheduler/src/gui/SongSchedulerWindow.form
+++ b/SongScheduler/src/gui/SongSchedulerWindow.form
@@ -45,71 +45,72 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-                              <Component id="songListScrollPane" min="0" pref="0" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="calendar" min="-2" pref="447" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="songNameLabel" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="songNameText" min="-2" pref="139" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="songSearchButton" min="-2" pref="171" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                          </Group>
+                          <Component id="songListScrollPane" min="-2" pref="442" max="-2" attributes="1"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                              <Component id="viewSelectedButton" min="-2" pref="147" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="songNameLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="songNameText" min="-2" pref="139" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
-                              <Component id="songSearchButton" min="-2" pref="171" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="generateScheduleButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="selectedSongInfoPanel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                      <Component id="calendar" min="-2" pref="624" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="viewSelectedButton" min="-2" pref="147" max="-2" attributes="0"/>
-                          <Component id="generateScheduleButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                  <Component id="selectedSongInfoPanel" min="-2" max="-2" attributes="1"/>
               </Group>
-              <EmptySpace pref="536" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="schedulePanel1" min="-2" pref="564" max="-2" attributes="0"/>
+              <EmptySpace pref="533" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                      <Component id="calendar" min="-2" pref="475" max="-2" attributes="1"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
+                  <Component id="schedulePanel1" alignment="0" min="-2" pref="619" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="299" max="-2" attributes="0"/>
                       <Component id="generateScheduleButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="viewSelectedButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="103" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="219" max="-2" attributes="0"/>
                   </Group>
-              </Group>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="102" alignment="0" attributes="1">
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="calendar" pref="190" max="32767" attributes="1"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="songNameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="songNameText" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="songSearchButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="songSearchButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="songListScrollPane" min="-2" pref="231" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="songListScrollPane" max="32767" attributes="0"/>
+                      <Component id="selectedSongInfoPanel" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="selectedSongInfoPanel" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -165,30 +166,6 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="jLabel6" alignment="0" max="32767" attributes="1"/>
-                      <Component id="jLabel5" alignment="0" max="32767" attributes="1"/>
-                      <Component id="jLabel1" alignment="0" max="32767" attributes="1"/>
-                      <Component id="jLabel2" alignment="0" max="32767" attributes="1"/>
-                      <Component id="jLabel3" alignment="0" max="32767" attributes="1"/>
-                      <Component id="jLabel4" alignment="0" max="32767" attributes="1"/>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="songYearDisplay" alignment="0" pref="280" max="32767" attributes="1"/>
-                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="songGenreDisplay" alignment="0" max="32767" attributes="1"/>
-                          <Component id="songAlbumDisplay" alignment="0" max="32767" attributes="1"/>
-                          <Component id="songLengthDisplay" alignment="0" max="32767" attributes="1"/>
-                          <Component id="songArtistDisplay" alignment="0" max="32767" attributes="1"/>
-                          <Component id="songNameDisplay" alignment="0" pref="84" max="32767" attributes="1"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace pref="251" max="32767" attributes="0"/>
-              </Group>
-              <Component id="jSeparator1" alignment="0" pref="634" max="32767" attributes="0"/>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Component id="jLabel9" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel7" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel8" alignment="0" max="32767" attributes="1"/>
@@ -199,8 +176,29 @@
                       <Component id="songLastPlayedDisplay" alignment="0" max="32767" attributes="1"/>
                       <Component id="songPopularityDisplay" alignment="0" pref="84" max="32767" attributes="1"/>
                   </Group>
-                  <EmptySpace pref="445" max="32767" attributes="0"/>
+                  <EmptySpace pref="470" max="32767" attributes="0"/>
               </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="jLabel6" alignment="0" max="32767" attributes="1"/>
+                      <Component id="jLabel5" alignment="0" max="32767" attributes="1"/>
+                      <Component id="jLabel1" alignment="0" max="32767" attributes="1"/>
+                      <Component id="jLabel2" alignment="0" max="32767" attributes="1"/>
+                      <Component id="jLabel3" alignment="0" max="32767" attributes="1"/>
+                      <Component id="jLabel4" alignment="0" max="32767" attributes="1"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="songYearDisplay" alignment="0" pref="556" max="32767" attributes="1"/>
+                      <Component id="songGenreDisplay" alignment="0" pref="556" max="32767" attributes="1"/>
+                      <Component id="songAlbumDisplay" alignment="0" pref="556" max="32767" attributes="1"/>
+                      <Component id="songLengthDisplay" alignment="0" pref="556" max="32767" attributes="1"/>
+                      <Component id="songArtistDisplay" alignment="0" pref="556" max="32767" attributes="1"/>
+                      <Component id="songNameDisplay" alignment="0" pref="556" max="32767" attributes="1"/>
+                  </Group>
+              </Group>
+              <Component id="jSeparator1" alignment="1" pref="659" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -329,6 +327,11 @@
     <Component class="javax.swing.JTextField" name="songNameText">
     </Component>
     <Container class="javax.swing.JScrollPane" name="songListScrollPane">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[300, 300]"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
       </AuxValues>
@@ -351,6 +354,13 @@
     <Component class="javax.swing.JLabel" name="songNameLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Song Name: "/>
+      </Properties>
+    </Component>
+    <Component class="gui.SchedulePanel" name="schedulePanel1">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[300, 300]"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
